--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.css
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.css
@@ -20,3 +20,28 @@
     border-radius: 4px;
     font-size: 12px;
 }
+
+input[type="time"]::-webkit-calendar-picker-indicator{
+    display: none;
+}
+
+.safari_only{
+		  display:none;
+		  }
+		  
+.chrome_display{
+	 display:block;
+	}
+		  
+@media not all and (min-resolution:.001dpcm) { 
+     @supports (-webkit-appearance:none) {
+			
+	.chrome_display{
+	 display:none;
+	 }
+     .safari_only{
+          display:block;
+		  }
+	
+    }
+}
