--- a/frontend/src/app/modules/features/employer/post-job/post-job-footer/post-job-footer.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-footer/post-job-footer.component.html
@@ -1,9 +1,9 @@
 <div class="row mt-5 ">
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 1 ">
 		<div class="form-group ">
-			<button [disabled]="!postJobForm.controls.jobInfo.valid || (postJobForm.controls.jobInfo.value.remote == true && postJobForm.controls.jobInfo.value.remote_option == null)" (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">
-				{{isEdit&&!isCopy ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
-				</button>
+			<button [disabled]="!postJobForm.controls.jobInfo.valid || (postJobForm.controls.jobInfo.value.remote == true && postJobForm.controls.jobInfo.value.remote_option == null) || (postJobForm.controls.jobInfo.value.min !=null && postJobForm.controls.jobInfo.value.max ==null) || (postJobForm.controls.jobInfo.value.max !=null && postJobForm.controls.jobInfo.value.min ==null) || checkWrkTime() || timeError" (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">
+			{{isEdit&&!isCopy ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+			</button>
 			
 		</div>
 	</div>
@@ -34,12 +34,12 @@
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="(isEdit || currentTabInfo.tabNumber == 4) && !isCopy">
 		<div class="form-group">
-			<button [disabled]="!postJobForm.value.screeningProcess.screening_process.length >= 1  || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience || ((postJobForm.controls.requirement.value.domain =='' || postJobForm.controls.requirement.value.optinal_skills =='')&& !postJobForm.controls.jobInfo.value.entry ) || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) " (click)="onToggleJobPreviewModal(true)" type="button" class="btn btn-theme-green  btn-block  btnSubmit">{{"shared.submit" | translate}}</button>
+			<button [disabled]="!postJobForm.value.screeningProcess.screening_process.length >= 1 || (postJobForm.controls.jobInfo.value.min !=null && postJobForm.controls.jobInfo.value.max ==null) ||(postJobForm.controls.jobInfo.value.max !=null && postJobForm.controls.jobInfo.value.min ==null) ||!postJobForm.controls.otherPref.valid ||!postJobForm.controls.jobInfo.valid   ||!postJobForm.controls.requirement.valid || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience ||(postJobForm.controls.jobInfo.value.remote == true && postJobForm.controls.jobInfo.value.remote_option == null)|| ((postJobForm.controls.requirement.value.domain =='' || postJobForm.controls.requirement.value.optinal_skills =='')&& !postJobForm.controls.jobInfo.value.entry ) || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) || timeError" (click)="onToggleJobPreviewModal(true)" type="button" class="btn btn-theme-green  btn-block  btnSubmit">{{"shared.submit" | translate}}</button>
 		</div>
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="(isCopy  && currentTabInfo.tabNumber == 4)">
 		<div class="form-group">
-			<button [disabled]="!postJobForm.value.screeningProcess.screening_process.length >= 1  || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience || ((postJobForm.controls.requirement.value.domain =='' || postJobForm.controls.requirement.value.optinal_skills =='')&& !postJobForm.controls.jobInfo.value.entry ) || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) " (click)="onToggleJobPreviewModal(true)" type="button" class="btn btn-theme-green  btn-block  btnSubmit">{{"shared.submit" | translate}}</button>
+			<button [disabled]="!postJobForm.value.screeningProcess.screening_process.length >= 1 || (postJobForm.controls.jobInfo.value.min !=null && postJobForm.controls.jobInfo.value.max ==null) || (postJobForm.controls.jobInfo.value.max !=null && postJobForm.controls.jobInfo.value.min ==null)||!postJobForm.controls.otherPref.valid ||!postJobForm.controls.jobInfo.valid  ||!postJobForm.controls.requirement.valid || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience ||(postJobForm.controls.jobInfo.value.remote == true && postJobForm.controls.jobInfo.value.remote_option == null)|| ((postJobForm.controls.requirement.value.domain =='' || postJobForm.controls.requirement.value.optinal_skills =='')&& !postJobForm.controls.jobInfo.value.entry ) || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) || timeError" (click)="onToggleJobPreviewModal(true)" type="button" class="btn btn-theme-green  btn-block  btnSubmit">{{"shared.submit" | translate}}</button>
 		</div>
 	</div>
 </div>
