--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -27,7 +27,7 @@
       <div class="col-lg-4  col-md-4 mt-4" style="z-index: 1;">
         <div class="upload-box upload-boxs ">
           <div class="box text-center upload-image upload-boxss">
-            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : savedUserDetails?.meta?.photo?.path+'/'+ savedUserDetails?.meta?.photo?.folder+'/'+savedUserDetails?.meta?.photo?.sizes?.medium+'/'+savedUserDetails?.photo+'?v='+ randomNum" alt="upload-photo" class="img-fluid mx-auto check-img rounded-circle border border-primary"
+            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : userprofilepath+savedUserDetails?.photo" alt="upload-photo" class="img-fluid mx-auto check-img rounded-circle border border-primary"
                                     style="width:150px;height:150px;">
             <input *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [style.top]="defaultProfilePic ? '-150px' : '-150px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
 			<input *ngIf="(!defaultProfilePic && !savedUserDetails?.photo)" [style.top]="defaultProfilePic ? '0px' : '0px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
@@ -51,13 +51,13 @@
       <div class="col-lg-4 col-md-4 matches-8">
         <div class=" form-group">
           <label>{{"shared.mobileNumber" | translate }}</label>
-          <ngx-intl-tel-input (ngModelChange)="checkNumber()"
+          <div><ngx-intl-tel-input (ngModelChange)="checkNumber()"
           [maxLength]="15"  (countryChange)="onCountryChange($event)" [cssClass]="'form-control'" [preferredCountries]="preferredCountries"
           [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
           [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]" [selectFirstCountry]="false"
           [selectedCountryISO]="CountryISO.UnitedStates" [phoneValidation]="true" [separateDialCode]="separateDialCode"
           [numberFormat]="PhoneNumberFormat.National" name="phone" formControlName="phone">
-        </ngx-intl-tel-input>
+        </ngx-intl-tel-input></div>
           <!-- <input ng2TelInput [ng2TelInputOptions]="{initialCountry: childForm?.value?.personalDetails?.country}" (countryChange)="onCountryChange($event)"  appMarkAsterisk numbersOnly formControlName="phone" type="text" class="form-control" placeholder="9876543210"> -->
           <app-control-messages [control]="f['phone']"></app-control-messages>
 		  <small *ngIf="invalidMobile"class="text-danger">Invalid mobile number</small>
@@ -458,7 +458,7 @@
       </button>
         </div>
         <div class="modal-body">
-            <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1 / 1" [autoCrop]="true" [resizeToWidth]="295" format="png" (imageCropped)="imageCropped($event)" (imageLoaded)="imageLoaded()" (loadImageFailed)="loadImageFailed($event)">
+            <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="false" [aspectRatio]="1 / 1" [autoCrop]="true" [resizeToWidth]="295" format="png" (imageCropped)="imageCropped($event)" (imageLoaded)="imageLoaded()" (loadImageFailed)="loadImageFailed($event)">
             </image-cropper>
         </div>
         <div class="modal-footer mt-3">
