--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -1,4 +1,4 @@
-<div class="card job-card">
+<div class="card job-card" *ngIf="!matchesModels">
   <div class="card-body">
     <div class="row">
       <div [ngClass]="(isMultipleMatches === true)?'col-lg-12 col-md-12':'col-lg-9 col-md-9'">
@@ -20,10 +20,10 @@
         </h5>
 		<div >
     <div class="media">
-      <img *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" [src]="userInfo?.photo ? userInfo?.meta?.photo?.path+'/'+ userInfo?.meta?.photo?.folder+'/'+userInfo?.meta?.photo?.sizes?.medium+'/'+userInfo?.photo+'?v='+ randomNum : 'assets/images/user-img-icon.jpg'">
+      <img *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" [src]="userInfo?.photo ? userprofilepath+userInfo?.photo : 'assets/images/user-img-icon.jpg'">
       <ng-container *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(1);">
         <ng-container *ngIf="userInfo?.privacy_protection?.photo == true; else elsePhotoTemplate">
-          <img [src]="userInfo?.photo ? userInfo?.meta?.photo?.path+'/'+ userInfo?.meta?.photo?.folder+'/'+userInfo?.meta?.photo?.sizes?.medium+'/'+userInfo?.photo+'?v='+ randomNum : 'assets/images/user-img-icon.jpg'">
+          <img [src]="userInfo?.photo ? userprofilepath+userInfo?.photo : 'assets/images/user-img-icon.jpg'">
         </ng-container>
         <ng-template #elsePhotoTemplate>
           <img [src]="'assets/images/user-lock.jpg'">
@@ -130,7 +130,7 @@
         <span class=" profile-btn" *ngIf="!isMultipleMatches" style="display: inline-block;">
           <a *ngIf="!isUploadShow || selectedCover?.file"
           [class.disabled]="!selectedCover?.file"
-          (click)="selectedCover?.file && onToggleCoverForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedCover?.file))" class="btn btn-smss btn-outline-orange  btn-sm" href="javascript:;">
+          (click)="selectedCover?.file && onToggleCoverForm(true, (selectedCover?.file))" class="btn btn-smss btn-outline-orange  btn-sm" href="javascript:;">
             <i class="fas fa-file-alt"></i>  {{"shared.coverLetter" | translate }}
           </a>
 		  <a *ngIf="isUploadShow && !selectedCover?.file" 
@@ -141,7 +141,7 @@
         <span *ngIf="isResume" class="profile-btn"  style="display: inline-block;">
           <a *ngIf="!isUploadShowResume || selectedResume?.file" style="margin-top: .25rem;"
           [class.disabled]="!selectedResume?.file"
-          (click)="selectedResume?.file && onToggleResumeForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedResume?.file))" class="btn btn-smss btn-outline-blue btn-sm" href="javascript:;">
+          (click)="selectedResume?.file && onToggleResumeForm(true, (selectedResume?.file))" class="btn btn-smss btn-outline-blue btn-sm" href="javascript:;">
             <i class="fas fa-file-alt"></i> {{"shared.resume" | translate }}
           </a> <a *ngIf="isUploadShowResume && !selectedResume?.file" style="margin-top: .25rem;"
          (click)="openResumselect(true)"  id="addResumeFile" 
@@ -275,7 +275,31 @@
 		</div>
   </div>
 </div>
+<div *ngIf="matchesModels">
+        <span class=" profile-btn" style="display: inline-block;margin-right:0.3rem !important;">
+          <a *ngIf="!isUploadShow || selectedCover?.file"
+          [class.disabled]="!selectedCover?.file"
+          (click)="selectedCover?.file && onToggleCoverForm(true, (selectedCover?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;" style="font-size:12px;">
+            <i class="fas fa-file-alt"></i>  {{"shared.coverLetter" | translate }}
+          </a>
+		  <a *ngIf="isUploadShow && !selectedCover?.file" 
+          (click)="openCoverselect(true)" class="btn btn-outline-blue btn-sm" style="font-size:12px;" href="javascript:;">
+            <i class="fas fa-file-alt"></i>  {{"shared.addCover" | translate }}
+          </a>
+        </span>
+        <span *ngIf="isResume" class="profile-btn"  style="display: inline-block;">
+          <a *ngIf="!isUploadShowResume || selectedResume?.file" style="font-size:12px;"
+          [class.disabled]="!selectedResume?.file"
+          (click)="selectedResume?.file && onToggleResumeForm(true, (selectedResume?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
+            <i class="fas fa-file-alt"></i> {{"shared.resume" | translate }}
+          </a> <a *ngIf="isUploadShowResume && !selectedResume?.file" style="font-size:12px;"
+         (click)="openResumselect(true)"  id="addResumeFile" 
+           class="btn btn-outline-blue btn-sm" href="javascript:;">
+            <i class="fas fa-file-alt"></i>  {{"shared.addResume" | translate }}
+          </a>
+        </span>
 
+</div>
 <app-cover-select
 [togglecoverSelectModal]="togglecoverSelectModal"
 *ngIf="togglecoverSelectModal"
